started header, added main.css

--- a/index.html
+++ b/index.html
@@ -2,11 +2,26 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
+    <!-- CSS Style Sheet -->
+    <link rel="stylesheet" href="css/main.css">
+
+
     <title>Dylan Perez</title>
 </head>
 <body>
-About Me
-Ships I Served On
-Links
+    <nav>
+        <ul class="nav nav-tabs">
+            <li class="active"><a href="#">Home</a></li>
+            <li><a href="about.html">About Me</a></li>
+            <li><a href="ships.html">Ships I've Been On</a></li>
+            <li><a href="resume.html">Resume</a></li>
+            <li><a href="links.html">Links</a></li>
+        </ul>
+    </nav>
 </body>
 </html>
