--- a/index.html
+++ b/index.html
@@ -15,13 +15,18 @@
 </head>
 <body>
     <nav>
-        <ul class="nav nav-tabs">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="about.html">About Me</a></li>
-            <li><a href="ships.html">Ships I've Been On</a></li>
-            <li><a href="resume.html">Resume</a></li>
-            <li><a href="links.html">Links</a></li>
-        </ul>
+        <div class="navbar">
+            <ul class="nav nav-pills">
+                <li class="active"><a href="#">Home</a></li>
+                <li><a href="about.html">About Me</a></li>
+                <li><a href="ships.html">Ships I've Been On</a></li>
+                <li><a href="resume.html">Resume</a></li>
+                <li><a href="links.html">Links</a></li>
+            </ul>
+        </div>
     </nav>
+    <header>
+        <h1>Dylan Perez<br><hr></h1>
+    </header>
 </body>
 </html>
